@@ -1,0 +1,24 @@
+DKIM-Signature: v=1; a=rsa-sha1; c=simple; d=blackhole2.messiah.edu; h=from:to
+	:subject:date; s=test3; bh=F84VyLrUbda4ryQ+R8
+	+e+8UgVxM=; b=g4rCx46HdrfJu2tIlNpNsBW5IDJZMbMOaxPYzZ3qOfxm7lw0VN
+	nzjx3Or5SlaeKSlhGqQwDmCqHzZ9caarICdQ==
+Received: from x.y.test
+   by example.net
+   via TCP
+   with ESMTP
+   id ABC12345
+   for <mary@example.net>;  21 Nov 1997 10:05:43 -0600
+Received: from machine.example by x.y.test; 21 Nov 1997 10:01:22 -0600
+From: Jason Long <jlong@messiah.edu>
+To: Nobody <nobody@messiah.edu>
+Subject: dkim test (dns failure)
+Date: Wed, 9 Apr 2008 09:11:00 -0500
+
+Should cause a verification error,
+the DNS public key cannot be checked.
+
+This is a test
+  More lines here
+
+Blah  blah  blah
+
